# pishro-bot

./: .env  .env.example  .gitignore  API_ARCHITECTURE.md  COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DOCS_INDEX.md  Dockerfile  FEATURES.md  FINAL_DELIVERY.md  IMPLEMENTATION.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.txt  PYTHONANYWHERE_READY.md  QUICKREF.md  QUICKSTART.md  QUICK_START.md  README.md  WEBHOOK_GUIDE.md  add_admin.py  cleanup_bot.sh  daemon_bot.sh  dashboard.sh  docker-compose.yml  final_fix.sh  init_db.py  main.py  main_api.py  pishro_bot.db  pyproject.toml  requirements-sqlite.txt  reset_bot.py  run_bot.py  run_servers.sh  seed_test_data.py  setup_daemon.sh  setup_pythonanywhere.sh  setup_webhook_ngrok.sh  start_bot.sh  start_system.sh  (+4 more)
app/: bot.py  config.py  middleware.py
app/api/: __init__.py  investments.py  schemas.py  transactions.py  users.py
app/database/: session.py
app/handlers/: accountant.py  admin.py  auth.py  investor.py  settings.py
app/keyboards/: advanced.py  inline.py
app/models/: models.py
app/services/: api_client.py  portfolio_service.py  repositories.py
app/states/: forms.py
app/utils/: formatters.py  logger.py
openspec/: prd.1.1.md
openspec/changes/implement-investment-bot/: design.md  proposal.md  tasks.md
openspec/changes/implement-investment-bot/specs/database-schema/: spec.md
openspec/changes/implement-investment-bot/specs/inline-keyboard-ui/: spec.md
openspec/changes/implement-investment-bot/specs/investor-notifications/: spec.md
static/: index.html
(+6 files in other folders)
